--- a/Config.ini
+++ b/Config.ini
@@ -3,6 +3,8 @@ seg_on = true
 retrieval_on = true
 
 mask_on = false
+min_mask_len = 0
+
 slice_only = false
 locate_by_err = true
 oracle_locate_open = true
