--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -33,7 +33,7 @@ COMMON: &common #标识
 DEVELOPMENT: &development
   <<: *common # 继承common，没有重新定义的变量，使用common变量值
   DEBUG: True
-  SQLALCHEMY_ECHO: True
+  SQLALCHEMY_ECHO: False
 
 STAGING: &staging
   <<: *common
