--- a/webui/package.json
+++ b/webui/package.json
@@ -24,16 +24,16 @@
     "@element-plus/icons-vue": "^2.0.4",
     "@vue-flow/background": "^1.3.0",
     "@vue-flow/core": "^1.33.2",
-    "axios": "0.21.3",
+    "axios": "^1.6.7",
     "dagre": "^0.8.5",
     "echarts": "^5.4.2",
     "element-plus": "2.5.6",
     "js-error-collection": "^1.0.7",
     "marked": "^12.0.0",
     "marked-highlight": "^2.1.1",
-    "mitt": "3.0.0",
-    "moment-mini": "2.22.1",
-    "nprogress": "0.2.0",
+    "mitt": "^3.0.1",
+    "moment-mini": "^2.29.4",
+    "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.16",
@@ -46,6 +46,8 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@achrinza/node-ipc": "9.2.7",
+    "ejs": "^3.1.9",
     "@babel/eslint-parser": "7.16.3",
     "@types/mockjs": "1.0.6",
     "@types/node": "^17.0.35",
@@ -57,8 +59,8 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vitest/coverage-c8": "^0.33.0",
     "@vitest/ui": "^1.6.0",
-    "@vue/cli-plugin-unit-jest": "4.5.17",
-    "@vue/cli-service": "4.5.17",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "@vue/test-utils": "^2.0.2",
     "@vueuse/core": "^8.7.5",
     "eslint": "8.18.0",
@@ -71,11 +73,11 @@
     "eslint-plugin-prettier": "4.1.0",
     "eslint-plugin-unicorn": "^43.0.2",
     "eslint-plugin-vue": "9.1.1",
-    "jsdom": "16.4.0",
+    "jsdom": "^24.0.0",
     "jsonc-eslint-parser": "^2.1.0",
     "majestic": "1.8.1",
     "mockjs": "1.1.0",
-    "prettier": "2.2.1",
+    "prettier": "^3.2.5",
     "resize-observer-polyfill": "^1.5.1",
     "rollup-plugin-visualizer": "^5.8.3",
     "sass": "^1.52.1",
@@ -89,31 +91,7 @@
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-svg-icons": "^2.0.1",
     "vitest": "^0.22.1",
-    "vue-tsc": "^0.34.16"
-  },
-  "pnpm": {
-    "peerDependencyRules": {
-      "ignoreMissing": [
-        "html-webpack-plugin",
-        "vite-plugin-mock",
-        "unplugin-auto-import",
-        "unplugin-vue-components",
-        "vue-template-compiler",
-        "unocss",
-        "unplugin",
-        "vite-plugin-mock",
-        "@vitejs/plugin-legacy",
-        "@vitejs/plugin-vue",
-        "@vitejs/*",
-        "@babel/*",
-        "vite",
-        "vue",
-        "@unocss/vite",
-        "rollup",
-        "vue-jest",
-        "@babel/*"
-      ]
-    }
+    "vue-tsc": "latest"
   },
   "browserslist": [
     "> 1%",
@@ -121,7 +99,7 @@
     "not op_mini all"
   ],
   "engines": {
-    "node": ">= 16 <19",
-    "pnpm": ">= 6 <9"
+    "node": "^18.17.0 || >=20.5.0",
+    "pnpm": ">= 6"
   }
 }
