--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
+backend/app.py
+webui/.env.serve-dev
+webui/package.json
+
 ### venv template
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
 .Python
 [Bb]in
 [Ii]nclude
-[Ll]ib
+/[Ll]ib
 [Ll]ib64
 [Ll]ocal
 [Ss]cripts
@@ -172,7 +176,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -381,3 +384,6 @@ webui/dist
 *.cursorrules
 *.vscode
 *.idea
+
+# Add this new rule
+!webui/src/lib
