add init kbowledge base script

--- a/.gitignore
+++ b/.gitignore
@@ -376,6 +376,7 @@ stats.html
 backend/configs.py
 backend/instance/
 backend/migrations
+backend/config/init_config.py
 backend/local_models
 webui/node_modules
 webui/dist
