--- a/backend/config/cracksql_gunicorn.conf
+++ b/backend/config/cracksql_gunicorn.conf
@@ -1,19 +1,19 @@
 # coding:utf-8
 import os
-# 并行工作进程数
+# Number of parallel worker processes
 workers = 1
-# 指定每个工作者的线程数
+# Number of threads per worker
 threads = 4
-# 监听内网端口80
+# Listen on internal network port 80
 bind = '0.0.0.0:3219'
-# 设置最大并发量
+# Set maximum concurrency
 worker_connections = 50
-# 设置进程文件目录
+# Set process file directory
 pidfile = 'gunicorn.pid'
-# 设置访问日志和错误信息日志路径
+# Set access log and error log path
 accesslog = './logs/gunicorn_acess.log'
 errorlog = './logs/gunicorn_error.log'
-# 设置日志记录水平
+# Set log level
 loglevel = 'info'
-# 代码发生变化是否自动重启
+# Whether to automatically restart when the code changes
 reload = False
