--- a/backend/config/init_config.yaml
+++ b/backend/config/init_config.yaml
@@ -6,47 +6,47 @@ LLM_MODELS:
     deployment_type: "local"  # cloud 或 local
     category: "llm"
     api_base: ""
-    api_key: ""  # 请替换为您的实际API密钥
-    path: "./local_models/DeepSeek-R1-Distill-Qwen-1.5B"  # 本地模型路径
-    description: "DeepSeek-R1-Distill-Qwen-1.5B LLM模型"
+    api_key: ""  # Please replace with your actual API key
+    path: "./local_models/DeepSeek-R1-Distill-Qwen-1.5B"  # Local model path
+    description: "DeepSeek-R1-Distill-Qwen-1.5B LLM model"
     temperature: 0.3
     max_tokens: 260000
 
 
-# Embedding模型配置
+# Embedding model configuration
 EMBEDDING_MODELS:
-  # OpenAI Embedding模型
+  # OpenAI Embedding model
   - name: "all-MiniLM-L6-v2"
     deployment_type: "local"  # cloud 或 local
     category: "embedding"
     api_base: ""
-    api_key: ""  # 请替换为您的实际API密钥
-    path: "./local_models/all-MiniLM-L6-v2"  # 本地模型路径
+    api_key: ""  # Please replace with your actual API key
+    path: "./local_models/all-MiniLM-L6-v2"  # Local model path
     dimension: 384
-    description: "Embedding模型，用于生成文本向量"
+    description: "Embedding model, used to generate text vectors"
 
-# 知识库配置
+# Knowledge base configuration
 KNOWLEDGE_BASES:
-  # MySQL知识库
+  # MySQL knowledge base
   - kb_name: "mysql_knowledge"
     db_type: "mysql"
-    kb_info: "MySQL数据库知识库，包含MySQL的关键字、函数、操作符等信息"
-    embedding_model: "all-MiniLM-L6-v2"  # 使用上面定义的Embedding模型
+    kb_info: "MySQL knowledge base, contains MySQL keywords, functions, operators, etc."
+    embedding_model: "all-MiniLM-L6-v2"  # Use the Embedding model defined above
     knowledge_files:
       - "./data/processed_document/mysql_8_kb.json"
 
-  # PostgreSQL知识库
+  # PostgreSQL knowledge base
   - kb_name: "postgresql_knowledge"
     db_type: "postgresql"
-    kb_info: "PostgreSQL数据库知识库，包含PostgreSQL的关键字、函数、操作符等信息"
+    kb_info: "PostgreSQL knowledge base, contains PostgreSQL keywords, functions, operators, etc."
     embedding_model: "all-MiniLM-L6-v2"
     knowledge_files:
       - "./data/processed_document/pg_14_kb.json"
 
-  # Oracle知识库
+  # Oracle knowledge base
   - kb_name: "oracle_knowledge"
     db_type: "oracle"
-    kb_info: "Oracle数据库知识库，包含Oracle的关键字、函数、操作符等信息"
+    kb_info: "Oracle knowledge base, contains Oracle keywords, functions, operators, etc."
     embedding_model: "all-MiniLM-L6-v2"
     knowledge_files:
       - "./data/processed_document/oracle_11_kb.json" 
