add command line usage & cloud llm service

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-./backend/llm_model/implementations.py
-./backend/app.py
-./webui/.env.serve-dev
-./webui/package.json
+backend/llm_model/implementations.py
+backend/app.py
+webui/.env.serve-dev
+webui/package.json
 
 ### venv template
 # Virtualenv
