--- a/webui/.env.build
+++ b/webui/.env.build
@@ -2,7 +2,7 @@
 #notes: login use mock api
 
 VITE_APP_ENV = 'dev'
-VITE_APP_BASE_URL = 'http://cracksql.dbmind.cn'
+VITE_APP_BASE_URL = 'http://127.0.0.1:30006'
 
 #image or oss address
 VITE_APP_IMAGE_URL = ''
